dist_man1_MANS=

if BUILD_bitpulseD
  dist_man1_MANS+=bitpulsed.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitpulse-qt.1
endif

if BUILD_bitpulse_CLI
  dist_man1_MANS+=bitpulse-cli.1
endif

if BUILD_bitpulse_TX
  dist_man1_MANS+=bitpulse-tx.1
endif

if BUILD_bitpulse_UTIL
  dist_man1_MANS+=bitpulse-util.1
endif

if ENABLE_WALLET
if BUILD_bitpulse_WALLET
  dist_man1_MANS+=bitpulse-wallet.1
endif
endif
