dist_man1_MANS=

if BUILD_bitpulsed
  dist_man1_MANS+=bitpulsed.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitpulsed-qt.1
endif

if BUILD_bitpulsed_CLI
  dist_man1_MANS+=bitpulsed-cli.1
endif

if BUILD_bitpulsed_TX
  dist_man1_MANS+=bitpulsed-tx.1
endif

if BUILD_bitpulsed_UTIL
  dist_man1_MANS+=bitpulsed-util.1
endif

if ENABLE_WALLET
if BUILD_bitpulsed_WALLET
  dist_man1_MANS+=bitpulsed-wallet.1
endif
endif
